[add] messages object utils and replace dummy data with functioning username, time, text

--- a/static/chat.html
+++ b/static/chat.html
@@ -29,16 +29,7 @@
             <li>Person 3</li>
           </ul>
         </div>
-        <div class="chat-messages">
-          <div class="message">
-            <p class="meta">Person 8 <span>1:01pm</span></p>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, quisquam.</p>
-          </div>
-          <div class="message">
-            <p class="meta">Person 14 <span>1:18pm</span></p>
-            <p class="text">Lorem ipsum dolor adipisicing elit. Voluptates, quisquam.</p>
-          </div>
-        </div>
+        <div class="chat-messages"></div>
       </main>
       <div class="chat-form-container">
         <form id="chat-form">
