--- a/static/chat.html
+++ b/static/chat.html
@@ -23,11 +23,7 @@
           <h3><i class="fas fa-comments"></i> Room Name:</h3>
           <h2 id="room-name"></h2>
           <h3><i class="fas fa-users"></i> Users</h3>
-          <ul id="users">
-            <li>Person 1</li>
-            <li>Person 2</li>
-            <li>Person 3</li>
-          </ul>
+          <ul id="users"></ul>
         </div>
         <div class="chat-messages"></div>
       </main>
